--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ volumes:
   kupo-data: {}
 
 services:
+
   cardano-node-bp:
     image: ghcr.io/blinklabs-io/cardano-node
     container_name: cardano-node-bp
@@ -14,6 +15,7 @@ services:
       - CARDANO_NETWORK=preview
       - RESTORE_SNAPSHOT=true
       - CARDANO_BLOCK_PRODUCER=true
+      #- CARDANO_SOCKET_PATH=/ipc/node.socket
       #- GENESIS_VERIFICATION_KEY=/opt/cardano/config/preview/genesis.vkey
       - CARDANO_SHELLEY_KES_KEY=/opt/cardano/config/preview/keys/kes.skey
       - CARDANO_SHELLEY_OPERATIONAL_CERTIFICATE=/opt/cardano/config/preview/keys/node.cert
@@ -27,34 +29,19 @@ services:
       - "3001:3001"
       - "12798:12798"
     command: run
-  # cardano-node:
-  #   image: ghcr.io/intersectmbo/cardano-node:10.1.2
-  #   restart: unless-stopped
-  #   container_name: cardano-node
-  #   ports:
-  #     - "3001:3001"
-  #   environment:
-  #     - NETWORK=preview
-  #     - CARDANO_NODE_SOCKET_PATH=/ipc/node.socket
-  #   volumes:
-  #     - ${HOME_IPC}:/ipc   # Use ${HOME_IPC} from .env
-  #     - $CARDANO_DATA_DIR:/data
-
-  postgres:
-    image: postgres:15.5
-    container_name: db-sync-postgres
-    environment:
-      - POSTGRES_PASSWORD=password123
-      - POSTGRES_DB=cexplorer
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
+    
+  cardano-node:
+    image: ghcr.io/intersectmbo/cardano-node:10.1.2
+    restart: unless-stopped
+    container_name: cardano-node
     ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      - "3002:3001"
+    environment:
+      - NETWORK=preview
+      - CARDANO_NODE_SOCKET_PATH=/ipc/node.socket
+    volumes:
+      - ${HOME_IPC}:/ipc   # Use ${HOME_IPC} from .env
+      - $CARDANO_DATA_DIR:/data
 
   db-sync:
     image: ghcr.io/intersectmbo/cardano-db-sync:13.5.0.2
@@ -71,8 +58,24 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password123
     volumes:
-      - /tmp/docker-cardano-node/ipc:/node-ipc  # Use ${HOME_IPC} from .env
+      - ${HOME_IPC}:/node-ipc  # Use ${HOME_IPC} from .env
       - db-sync-data:/var/lib
+
+  postgres:
+    image: postgres:15.5
+    container_name: db-sync-postgres
+    environment:
+      - POSTGRES_PASSWORD=password123
+      - POSTGRES_DB=cexplorer
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   ogmios:
     image: cardanosolutions/ogmios:v6.8.0
