--- a/kubernetes/pv.yml
+++ b/kubernetes/pv.yml
@@ -1,63 +1,94 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: efs-pv
+spec:
+  capacity:
+    storage: 30Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: efs-sc
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: fs-04ca0a28439fee6a7
+
+---
+
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cardano-data
   namespace: adrian-platform-24-1-x
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
+      storage: 30Gi
+  storageClassName: efs-sc
 
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: db-sync-data
-  namespace: adrian-platform-24-1-x
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: cardano-data
+#   namespace: adrian-platform-24-1-x
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 10Gi
 
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-data
-  namespace: adrian-platform-24-1-x
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: db-sync-data
+#   namespace: adrian-platform-24-1-x
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 10Gi
 
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: ogmios-data
-  namespace: adrian-platform-24-1-x
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: postgres-data
+#   namespace: adrian-platform-24-1-x
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 10Gi
 
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: kupo-data
-  namespace: adrian-platform-24-1-x
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: ogmios-data
+#   namespace: adrian-platform-24-1-x
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 5Gi
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: kupo-data
+#   namespace: adrian-platform-24-1-x
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 5Gi
