--- a/kubernetes/pv.yml
+++ b/kubernetes/pv.yml
@@ -12,15 +12,15 @@ spec:
   storageClassName: efs-sc
   csi:
     driver: efs.csi.aws.com
-    volumeHandle: fs-04ca0a28439fee6a7
+    volumeHandle: fs-08a9835fd0638f578
 
 ---
 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cardano-data
-  namespace: adrian-platform-24-1-x
+  name: efs-pvc
+  namespace: platform-23-3-0
 spec:
   accessModes:
     - ReadWriteMany
@@ -28,67 +28,3 @@ spec:
     requests:
       storage: 30Gi
   storageClassName: efs-sc
-
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: cardano-data
-#   namespace: adrian-platform-24-1-x
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 10Gi
-
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: db-sync-data
-#   namespace: adrian-platform-24-1-x
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 10Gi
-
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: postgres-data
-#   namespace: adrian-platform-24-1-x
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 10Gi
-
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: ogmios-data
-#   namespace: adrian-platform-24-1-x
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 5Gi
-
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: kupo-data
-#   namespace: adrian-platform-24-1-x
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 5Gi
