--- a/kubernetes/cardano-node.yml
+++ b/kubernetes/cardano-node.yml
@@ -59,5 +59,5 @@ spec:
       volumes:
       - name: efs-volume
         hostPath:
-          path: /mnt/efs  # Root EFS mount
+          path: /mnt/efslocal  # Root EFS mount
           type: Directory
