--- a/kubernetes/db-sync.yml
+++ b/kubernetes/db-sync.yml
@@ -32,7 +32,7 @@ spec:
               value: "4sJHMjjEAGEi"
           resources:
             limits:
-              memory: "512Mi"
+              memory: "2Gi"
               cpu: "500m"
             requests:
               memory: "256Mi"
