--- a/kubernetes/efs-mounter.yml
+++ b/kubernetes/efs-mounter.yml
@@ -19,9 +19,11 @@ spec:
         - /bin/sh
         - -c
         - |
-          yum install -y nfs-utils &&
-          mkdir -p /mnt/efs && mkdir -p /mnt/efslocal &&
-          mount -t efs -o tls fs-08a9835fd0638f578:/ /mnt/efs &&
+          dnf install -y amazon-efs-utils && \
+          mkdir -p /mnt/efs && \
+          mkdir -p /mnt/efslocal && \
+          sed -i 's/enabled = true/enabled = false/' /etc/amazon/efs/efs-utils.conf && \
+          mount -t efs -o tls,region=eu-west-2 fs-08a9835fd0638f578 /mnt/efs && \
           while true; do sleep 30; done
         securityContext:
           privileged: true
