--- a/kubernetes/efs-mounter.yml
+++ b/kubernetes/efs-mounter.yml
@@ -22,7 +22,7 @@ spec:
           dnf install -y amazon-efs-utils && \
           mkdir -p /mnt/efs && \
           mkdir -p /mnt/efslocal && \
-          sed -i 's/enabled = true/enabled = false/' /etc/amazon/efs/efs-utils.conf && \
+          echo "enabled=false" > /etc/amazon/efs/efs-utils.conf.d/disable-watchdog.conf && \
           mount -t efs -o tls,region=eu-west-2 fs-08a9835fd0638f578 /mnt/efs && \
           while true; do sleep 30; done
         securityContext:
