--- a/kubernetes/kupo.yml
+++ b/kubernetes/kupo.yml
@@ -32,7 +32,7 @@ spec:
             - "origin"
           resources:
             limits:
-              memory: "512Mi"
+              memory: "2Gi"
               cpu: "500m"
             requests:
               memory: "256Mi"
